# dvote-rs-ffi

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cbindgen.toml  makefile
src/: encryption.rs  ffi.rs  hashing.rs  lib.rs  zk-snarks.rs
src/components/: Cargo-encryption.toml  Cargo-ffi.toml  Cargo-hashing.toml  Cargo-signing.toml  Cargo-snarks.toml  Cargo-wallet.toml  signing.rs  wallet.rs
