[package]
name = "dvote-rs-ffi"
version = "0.6.0"
authors = ["dappfuse <5128827-dappfuse@users.noreply.gitlab.com>"]
edition = "2018"

[lib]
name = "dvote"
crate-type = ["staticlib", "cdylib"]

[dependencies]
dvote-rs = { git = "https://gitlab.com/vocdoni/dvote-rs", rev = "a2162c49" }
za-prover = { git = "https://github.com/adria0/za", rev = "e3634a3" }
