[package]
name = "dvote-rs-ffi"
version = "0.7.0"
authors = ["Jør∂¡ <itsbrickpop@gmail.com>"]
edition = "2018"

[lib]
name = "dvote"
crate-type = ["staticlib", "cdylib"]

[dependencies]
dvote-rs = { git = "https://gitlab.com/vocdoni/dvote-rs", rev = "1dff726" }
za-prover = { git = "https://github.com/adria0/za", rev = "e3634a3" }
base64 = "0.12.3" # used by symmetric encryption wrappers
